# QORA-STT-TINY

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
model/: README.md
src/: config.rs  decoder.rs  encoder.rs  inference.rs  lib.rs  loader.rs  main.rs  mel.rs  save.rs  tokenizer.rs  wav.rs  weights.rs
