[package]
name = "qora-stt"
version = "0.1.0"
edition = "2021"

[dependencies]
half = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
safetensors = "0.4"
rayon = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
